Fixes some layout bugs on the gcode arg table

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -78,7 +78,7 @@
 }
 
 .custom-tagline-btn {
-  margin-top: 25px;
+  margin-top: 15px;
 }
 
 
